# NeuralNetwork

./: .gitignore  CMakeLists.txt  README.md
neural/: CMakeLists.txt
neural/include/neural/: activation_functions.h  assert.h  dataset.h  defines.h  layer.h  multilayer_perceptron.h  perceptron.h  trainer.h
neural/src/: dataset.cpp  datasetloader.cpp  datasetloader.h  defines.cpp  defines.h  layer.cpp  multilayer_perceptron.cpp  neuralnetwork.cpp  neuralnetwork.h  perceptron.cpp  perceptron.h  trainer.cpp
test/: CMakeLists.txt
test/src/: datasetgenerator.h  main.cpp  statistics.h
